docs: update til

--- a/etc/2021_01_13_TIL.md
+++ b/etc/2021_01_13_TIL.md
@@ -1,1 +1,25 @@
 ## 2021년 1월 13일
+
+### 실수
+이전 PR에서 실수를 했다. ORM관련된 필드를 제대로 못가져와서 논리의 오류가 생겼다.
+메서드 한 두개로 테스트해본 것 같은데, 제대로 확인이 안된 것 같다.
+응답하는 메시지를 변경하는 작업이였는데, 비슷해서 잘 변경된줄 알고 넘어간 것 같다.
+
+이전에 E2E 테스트 환경을 만들 수 없었지만 앞으로는 꼼꼼히 확인하자. 특히 테스트코드가 없으니깐. 개발에 문제가 생겨서 QA분에게 너무 미안한 부분이다.
+
+### HTTPS
+포스트맨으로 API콜을 하는데 불러지지가 않는다. 처음엔 routes에서 서브도메인에 api도 붙여보고, path 앞단에 api도 붙여봤지만 잘 안됐다. URL 찾는데만 1시간 넘게 소요했다.
+
+문제는 nginx에서 api.~~~.com/path의 라우트를 인식하지 못하는점이였다.
+헤더의 문제가 있나, Nginx에서 문제가 있나 찾아보다 사수님이 겨우 찾아주셨다.
+문제는 https로 부르지 않은 점. 저번에도 비슷한 이슈가 있었는데, 정말 어렵다.
+
+아무래도 로컬에서 docker기반으로 컨테이너 띄우고, nginx로 접속하는데의 서툰점이 있다. 심지어 로컬 host까지도 도메인으로 접속해야한다. 어쩜 더 편한 부분도 있지만, 어려운부분이 이만저만 아닌 것 같다.
+
+### 문서화
+매일매일 삽질한다. 처음이라 모르는부분이 엄청 많아서, 바로 질문드리기가 어렵다. 그래서 더 삽질하게 된다. 고민했던 부분과 사수님에게 들었던 답변을 바로바로 적어야겠다.
+
+매일 일기장처럼 적고, 여유로워지면 정리해야겠다. 이곳저곳 적다보니 더 정리가 안되는 것 같기도 하다.
+
+
+암튼..! 너무 힘든 하루였다. 내일도 더 잘하고 싶다
